--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,13 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "types": ["vite-plugin-vue-layouts/client","vite-plugin-pages/client"]
+    "types": ["vite-plugin-vue-layouts/client","vite-plugin-pages/client"],
+    "baseUrl": ".",
+    "paths": {
+        "@/*": [
+            "src/*"
+        ]
+    },
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
